<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_Cartesian"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/action_Cartesian"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_Polar"
            android:orderInCategory="100"
            android:enabled="false"
            android:title="@string/action_Polar"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_Parametric"
            android:enabled="false"
            android:orderInCategory="100"
            android:title="@string/action_Parametric"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_About"
        android:orderInCategory="100"
        android:title="@string/action_About"
        app:showAsAction="never" />

</menu>